plugins {
    id 'maven-publish'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

group = 'org.reactfx'
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

dependencies {

}

javafx {
    version = "17"
    modules = [ 'javafx.graphics', 'javafx.controls' ]
}

tasks.withType(JavaCompile) {
    options.compilerArgs += [
            '--add-exports=javafx.base/com.sun.javafx.binding=reactfx'
    ]
}

task sourcesJar(type: Jar) {
    archiveClassifier = 'sources'
    from sourceSets.main.allSource
}


publishing {
    repositories {
        maven {
            url "${writeUrl}"
            credentials {
                username "${mavenUsername}"
                password "${mavenPassword}"
            }
        }
    }

    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifact sourcesJar
            group = 'com.bullhead.javafx'
            version = '1.0.0'
            artifactId = 'reactfx'
        }
    }
}
